--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 # Production Dependencies
-django>=6.0
-django-ninja
-langgraph
 Django==6.0
 ninja==1.3.0
 langchain==0.3.13
@@ -13,6 +10,7 @@ chromadb
 fastmcp==0.3.1
 langchain-openai
 langchain-mcp-adapters
-vanna[chromadb,openai]
+vanna[openai,fastapi]>=2.0.0
 pandas
 python-dotenv
+tabulate
